# WSRender_V0.0

./: Config.txt  Customized.fig  Customized.m  GUI.m  MultiRobot_GUI.fig  MultiRobot_GUI.m  README.md  Visual_C_Plus.fig  Visual_C_Plus.m  WSRender.m  WSRender_GUI.m
C++/: CMakeLists.txt  Doxygen_config_file  README.md
C++/include/: robot.h
C++/src/: kdl_dynamics.cpp  main.cpp  robot.cpp
Config/: All_Indices.txt  Env_config.txt  Indices_config.txt  Parameters_config.txt  Rob_config.txt
Functions/: AlphaShape_WS.m  Base_Define.m  Boundary_WS.m  BuildRobot.m  Cal_BoundaryVolume.m  Cal_Volume.m  Choose_Indices.m  Config.txt  Def_Constraints.m  DefineRobot.m  Define_Volume.m  Draw_Arrow.m  Draw_Invironment.m  Dynamic_M.asv  Dynamic_M.m  ExampleRobot.m  Find_Interact_Bimanual.m  GenerateJoint.m  Generate_Joint.m  Get_Interact_Analysis_Results.m  GlobalEvaluate.m  GlobalIterate.m  GlobalVolume_Iterate.m  Global_Integral.m  Global_New.m  Initial_Precision.m  Interaction_Analysis.m  Joint_Limitation.m  Load_DexMap.m  Local_Evaluation.m  Local_Indice_Map.m  MappingEfficiency.m  Mycombvec.m  New_ScatterToVolume.m  OmniJoint_Limitation.m  Optimized_Interaction_Analysis.m  PlaceMultiRobot.m  PlaceRobot.m  PlaceTwoRobot.m  Place_Robot.m  (+31 more)
Functions/Old_Functions/: AlphaShape_WS.m  Cal_BoundaryVolume.m  Cal_Volume.m  Def_Constraints.m  GenerateJoint.m  Global_Integral.m  Global_New.m  HumanArm.m  Mapping.m  PlaceRobot.m  PlaceTwoRobot.m  ReachableWS.m  inpolyhedron.m  (+6 more)
Scaling GUI/: GUI.fig  Master_Manip_ws_51.txt  README.md  WSRender_GUI.fig  WS_scaling_GUI.m  robots_config.txt
(+11 files in other folders)
